# pomodocat

./: .gitignore  CLAUDE.md  Package.swift  build-app.sh  install-mac.sh  install-windows.md
.github/workflows/: release.yml
Sources/PomodoCat/: CatMediaView.swift  CatOverlay.swift  ContentView.swift  PlaceholderView.swift  PomodoCatApp.swift  Preferences.swift  SettingsView.swift  SidebarView.swift  SplashView.swift  Theme.swift  TimerView.swift  TimerViewModel.swift
Sources/PomodoCat/Resources/: README.txt
tauri/: README.md  index.html  install-mac.sh  install-windows.ps1  overlay.html  package-lock.json  package.json  vite.config.ts
tauri/installers/: README.md  install-mac.command  install-windows.bat  install-windows.ps1
tauri/sample-cats/: Maya_4K.webm
tauri/scripts/: convert-cats.sh  make-icon.py
tauri/src/: main.ts  overlay.ts  store.ts  style.css  types.ts  views.ts
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: lib.rs  main.rs
