[package]
name = "pomodocat"
version = "0.2.3"
description = "Focus & félins — Pomodoro timer with full-screen cat reward"
authors = ["PomodoCat"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "pomodocat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "macos-private-api", "tray-icon", "image-png", "devtools"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
# Used to set the overlay window's NSWindow level above the menu bar.
cocoa = "0.26"
objc = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
